<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SellingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/color_bg"
            android:layout_height="80dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout3">

        <ImageButton
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/ib_sell_home"
                android:scaleType="fitXY" android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:contentDescription="@string/app_name"/>
        <TextView
                android:text="@string/market_sell"
                android:textColor="@color/color_text"
                android:textSize="26sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/ib_sell_home" android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/ib_sell_home" android:layout_marginTop="28dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" android:id="@+id/constraintLayout5">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sell_shares" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp" android:textColor="@color/color_bg"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@android:color/transparent"
                    android:hint="@string/_8_shares"
                    android:id="@+id/et_sell_shares"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:textSize="20sp"
                    android:textColor="@color/color_bg" android:importantForAutofill="no"
                    android:textAlignment="viewEnd" app:layout_constraintTop_toTopOf="@+id/tv_sell_shares"/>
            <View android:layout_width="match_parent"
                  android:layout_height="0.7dp"
                  android:background="@color/color_light_grey"
                  android:layout_marginTop="16dp"
                  android:id="@+id/view" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/tv_sell_price"/>
            <TextView
                    android:text="@string/market_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sell_shares" android:textSize="20sp"
                    android:textColor="@color/color_bg" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sell_price" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_sell_shares" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:textSize="20sp"/>
            <TextView
                    android:text="@string/estimated_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/view" android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sell_income"
                    app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:textSize="20sp"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:src="@drawable/ic_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/fab_sell_confirm" android:layout_marginTop="60dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>